corrected responsiveness on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -192,10 +192,10 @@ hr {
   text-shadow: 0 0 2px white, 0 0 1px white;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 414px) {
   .imageText {
     margin-left: 2.25rem;
-    margin-top: -4.25rem;
+    margin-top: -2.75rem;
     top: 30%;
     left: 25%;
     transform: translate(-50%, -50%);
@@ -271,5 +271,30 @@ hr {
     padding: 0.75rem;
     list-style: none;
     font-size: 0.75rem;
+  }
+}
+@media (min-width: 1024px) {
+  .imageText {
+    margin-left: 2rem;
+    margin-top: -9.75rem;
+    top: 30%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    color: black;
+    font-size: 2.5rem;
+    text-shadow: 0 0 2px white, 0 0 1px white;
+  }
+}
+
+@media (max-width: 760px) {
+  .imageText {
+    margin-left: 3.5rem;
+    margin-top: -4.75rem;
+    top: 30%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    color: black;
+    font-size: 1rem;
+    text-shadow: 0 0 2px white, 0 0 1px white;
   }
 }
